[tool.poetry]
name = "neon-search-engine"
version = "0.1.0"
description = ""
authors = ["Jayden Edara <aedara@uw.edu>"]
readme = "README.md"
packages = [{include = "search_engines"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = {version = ">=2.22.0", extras = ["socks"]}
beautifulsoup4 = ">=4.10.0"
fake-useragent = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
